welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:11: error: ';' expected but 'else' found.
}else{
 ^SlugSnail:23: error: ';' expected but '=' found.
ef isFacingTrail():Boolean = {
                           ^